weird injection bug happened, UserService doesnt recognize imports